# ISPROYECTO

ProyectoIS_2324/: CMakeLists.txt  LINK VIDEO.txt
ProyectoIS_2324/datos/: cursos.txt  usuarios.txt
ProyectoIS_2324/src/: CMakeLists.txt
ProyectoIS_2324/src/bd/: CMakeLists.txt  bd.cc  bd.h
ProyectoIS_2324/src/curso/: CMakeLists.txt  curso.cc  curso.h
ProyectoIS_2324/src/display/: CMakeLists.txt  funciones.h  main.cc
ProyectoIS_2324/src/usuario/: CMakeLists.txt  usuario.cc  usuario.h
ProyectoIS_2324/tests/: CMakeLists.txt  bd_test.cc  curso_test.cc  usuario_test.cc
